--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "version": "0.1.0",
   "author": "codekyd",
   "dependencies": {
-    "@material-ui/core": "^4.9.1",
     "bootstrap": "^4.4.1",
     "gatsby": "^2.19.7",
     "gatsby-image": "^2.2.39",
@@ -20,6 +19,7 @@
     "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1"
   },
@@ -38,7 +38,7 @@
     "build": "gatsby build",
     "dev": "env-cmd -f .env.development gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "start": "npm run devenelop",
+    "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
